// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render header correctly using ReactShallowRenderer 1`] = `
<header>
  <h1>
    Expansify App
  </h1>
  <NavLink
    activeClassName="is-active"
    exact={true}
    to="/dashboard"
  >
    Dashboard
  </NavLink>
  <NavLink
    activeClassName="is-active"
    to="/create"
  >
    Create Expense
  </NavLink>
  <button>
    Logout
  </button>
</header>
`;

exports[`should render header correctly using shallow 1`] = `
<header>
  <h1>
    Expansify App
  </h1>
  <[object Object]
    activeClassName="is-active"
    exact={true}
    to="/dashboard"
  >
    Dashboard
  </[object Object]>
  <[object Object]
    activeClassName="is-active"
    to="/create"
  >
    Create Expense
  </[object Object]>
  <button
    onClick={[Function]}
  >
    Logout
  </button>
</header>
`;
